--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: apka
+name: weather
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -32,8 +32,10 @@ dependencies:
   dio: ^4.0.6
   cached_network_image: ^3.2.2
   path_provider: ^2.0.11
+  hive_flutter: ^1.1.0
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: 1.1.3
+  build_runner: 2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
