--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  auto_route: 4.0.1
   flutter:
     sdk: flutter
 
@@ -50,6 +51,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: 1.1.3
   build_runner: 2.1.11
+  auto_route_generator: 4.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
